--- a/changelog.txt
+++ b/changelog.txt
@@ -3,3 +3,9 @@ Version: 0.1.0
 Date: 2020.04.26
   Changes:
     - Initial release.
+
+---------------------------------------------------------------------------------------------------
+Version: 0.2.0
+Date: 2020.11.29
+  Changes:
+    - Updated for 1.1
