--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.0
+Date: 2021.02.07
+  Changes:
+    - Updated for Factorio v1.0
+
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2020.04.26
   Changes:
