--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.3.0
+Date: 2021.02.07
+  Changes:
+    - Updated for Factorio v1.1
+
+---------------------------------------------------------------------------------------------------
 Version: 0.2.0
 Date: 2021.02.07
   Changes:
